# hs-datahand

./: .gitmodules  README.md  TODO.md  build+program.nixos.sh  default.nix  hs-datahand.cabal  package.nix  shell.nix
src/: Main.hs
src/DataHand/: KeyAliases.hs  Keys.hs
src/DataHand/Layouts/: ProgrammerDvorak.hs
stm32f10x/: Makefile  NOTES.md  shell.nix  steps_to_build
stm32f10x/hs_src/: Main.hsc
stm32f10x/lib/CMSIS/Core/CM3/: stm32f10x.h
