name:                hs-datahand
version:             0.2.0.0
synopsis:            DataHand layout compositor
description:         Generates layout header files for use in dhteensy
homepage:            https://github.com/elitak/hs-datahand
license:             GPL-3
license-file:        LICENSE
author:              Eric Litak
maintainer:          elitak@gmail.com
copyright:           Eric Litak, 2014
build-type:          Simple
cabal-version:       >=1.8

executable hs-datahand
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base >=4.6
  other-modules:       DataHand.KeyAliases
                     , DataHand.Keys
                     , DataHand.Layout
                     , DataHand.Layouts.ProgrammerDvorak
